fix: horizontal scroll in header

--- a/Tradio.Client/src/styles.css
+++ b/Tradio.Client/src/styles.css
@@ -124,6 +124,8 @@ header {
 
 .home-header {
   position: absolute;
+  left: 0;
+  right: 0;
 }
 
 .label-text {
